src/components/navbar/Navbar.scss
@import "styles/variables.scss";

.navbar {
  @include not-selectable();
  $p: &;
  position: relative;
  margin-top: $spacing-lg;
  margin-bottom: $spacing-xxl;
  padding-bottom: $spacing-xs;
  @media screen and (min-width: $screen-md) {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-bottom: initial;
  }

  &.dark {
    #{$p}__logo,
    #{$p}__link {
      color: $light;

      &:hover {
        color: $gray-2;
      }

      svg {
        fill: $primary;
      }
    }

    #{$p}__theme-toggle {
      svg {
        fill: $light;

        &:hover {
          fill: $gray-2;
        }
      }
    }
  }

  &--wide {
    @media screen and (min-width: $screen-xxl) {
      position: relative;
      left: 50%;
      transform: translateX(-50%);
      width: calc(#{$site-width} + 300px);
    }
  }

  &__theme-toggle {
    &--mobile {
      position: absolute;
      top: 0;
      right: 0;
      @media screen and (min-width: $screen-md) {
        display: none;
      }
    }

    &--desktop {
      display: none;
      @media screen and (min-width: $screen-md) {
        display: block;
        margin-left: $spacing-lg;
      }
    }
  }

  &__links {
    display: flex;
    justify-content: space-between;
    @media screen and (min-width: $screen-md) {
      align-items: center;
    }
  }

  &__logo,
  &__link {
    transition: $transition-fast;

    &:hover {
      color: $gray-2;
    }
  }

  &__logo {
    display: flex;
    align-items: center;
    width: fit-content;
    margin-bottom: $spacing-xs;
    font-weight: $font-bold;
    text-decoration: none;
    color: inherit;
    @media screen and (min-width: $screen-md) {
      margin-bottom: initial;
    }

    &__icon {
      margin-right: $spacing-xxs;

      svg {
        width: 1.5em;
        fill: $primary;
        transition: $transition-fast;
      }
    }
  }

  &__link {
    text-decoration: none;
    color: inherit;
    @media screen and (min-width: $screen-md) {
      &:not(:first-of-type) {
        margin-left: $spacing-lg;
      }
    }
  }
}

